==> SilenceLY05/STM32F103HAL/45-AD7192-4路单端单次转换输出/User/ADC/bsp_ad7192.c <==
#include "bsp_ad7192.h"
#include "bsp_usart.h"
#include <string.h>

void AD7192_Init(void)
{
	GPIO_InitTypeDef        GPIO_InitStructure;
	
	
	AD7192_GPIO_CLK_ENABLE();
	AD7192_SPIx_CLK_ENABLE();
	
	GPIO_InitStructure.Pin = AD7192_CS_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(AD7192_CS_PORT,&GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = AD7192_MISO_PIN | AD7192_MOSI_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(AD7192_MISO_PORT,&GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = AD7192_SCK_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(AD7192_SCK_PORT,&GPIO_InitStructure);
	
	
	/* SPI外设配置 */
	hspi_AD7192.Instance = AD7192_SPIx;
  hspi_AD7192.Init.Mode = SPI_MODE_MASTER;
  hspi_AD7192.Init.Direction = SPI_DIRECTION_2LINES;
  hspi_AD7192.Init.DataSize = SPI_DATASIZE_8BIT;
  hspi_AD7192.Init.CLKPolarity = SPI_POLARITY_HIGH;
  hspi_AD7192.Init.CLKPhase = SPI_PHASE_2EDGE;
  hspi_AD7192.Init.NSS = SPI_NSS_SOFT;
  hspi_AD7192.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_32;
  hspi_AD7192.Init.FirstBit = SPI_FIRSTBIT_MSB;
  hspi_AD7192.Init.TIMode = SPI_TIMODE_DISABLE;
  hspi_AD7192.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
  hspi_AD7192.Init.CRCPolynomial = 7;
	HAL_SPI_Init(&hspi_AD7192);
	
	
	/* 片选使能 */
	AD7192_CS_ENABLE();
	
}

unsigned char WriteToAD7192ViaSPI(const unsigned char RegisterStarAddress,const unsigned char NumberOfRegisterToWrite,uint32_t *DataBuffer,unsigned char OffsetInBuffer)
{
	//形参包括要写入寄存器的起始地址RegisterStartAddress(取值范围是从0x00——0x07)，写入寄存器的个数，指向要写入AD7192寄存器的数组的指针(DataBuffer才是要写出的值其他是中间变量)，
	//const unsigned char OffsetInBuffer虽然定义但没有用到，主要是与通过SPI向AD7192读操作函数对称
	/*分别定义一个读缓存和写缓存，再把写缓存赋值，然后通过
		调用void ADuC7026SpiOperation(unsigned char* WriteBuffer, unsigned char *ReadBuffer, unsigned char NumberOfByte)来执行，将写缓存数据传送至AD7192*/
		
	unsigned char WriteBuffer[4];//定义unsigned char WriteBuf[4]数组，数组中的元素为无符号字符型，占一个字节
	unsigned char ReadBuffer[4]; //定义unsigned char ReadBuf[4]数组，数组中的元素为无符号字符型，占一个字节
	unsigned char i;
	
	
	for(i = 0;i<NumberOfRegisterToWrite;i++)         //DataBuffer通常指向AD7192Registers
	{
		WriteBuffer[0] = WEN | RW_W | ((RegisterStarAddress + i) << 3) | CREAD_DIS;     //无一例外，首先写入通信寄存器;8位数据;下一个操作是对指定寄存器执行写操作。
		WriteBuffer[1] = DataBuffer[RegisterStarAddress+i]>>16;                         //右移16位表示什么意思？DataBuffer是指向无符号长整型的数组指针，每个数组元素占4个字节(32位)，最高的8位无效，该语句是将16-23这8位二进制数赋给WriteBuf[1]。
		WriteBuffer[2] = DataBuffer[RegisterStarAddress + i]>>8;                        //右移8位表示什么意思？同理该语句是将8-15这8位二进制数赋给WriteBuf[2]。
		WriteBuffer[3] = DataBuffer[RegisterStarAddress +i];                            //同理该语句是将0-7这8位二进制数赋给WriteBuf[3]。
		
		AD7192_ReadData(WriteBuffer,ReadBuffer,4);                                      //看到了吧，最后还是通过调用STM32F103SpiOperation(WriteBuf, ReadBuf, 4)来完成写操作
	}
	
	return 0;
}

unsigned char ReadFromAD7192ViaSPI(const unsigned char RegisterStarAddress,const unsigned char NumberOfRegistersToRead,uint32_t *DataBuffer,const unsigned char OffsetInBuffer)
{
	//形参包括要读寄存器的起始地址RegisterStartAddress(取值范围是从0x00——0x07)，要读取寄存器的个数，指向将读取AD7192寄存器数据存入的数组的指针(DataBuffer才是要读入的值其他是中间变量)，
	//一般指向AD7192Registers[8]，
	//const unsigned char OffsetInBuffer，字面意思是缓存内偏移，是指AD7192Registers[8]数组内部偏移，注意是数组哦，之前我们说过AD7192Registers[8]之所以定义8个元素，
	//一个寄存器对应AD7192Registers[8]数组的一个元素，互不干扰。
	
	unsigned char WriteBuffer[4] = {0,0,0,0};       //定义有4个元素的写缓存数组，每个数组元素占1个字节。
	unsigned char ReadBuffer[4] = {0,0,0,0};        //定义有4个元素的读缓存数组，每个数组元素占1个字节。
	unsigned char i;
	
	
	for(i=0;i<NumberOfRegistersToRead;i++)
	{
		WriteBuffer[0] = WEN | RW_R | ((RegisterStarAddress + i) << 3) | CREAD_DIS;  //写入通信寄存器;8位数据;下一个操作是对指定寄存器执行读操作。CREAD_DIS表示不使能连续读。
		
		//确定下一步进行寄存器读操作，那么写操作自然无效喽。
		AD7192_ReadData(WriteBuffer,ReadBuffer,1);           //首先通过写入通信寄存器来选定下一步要读取的寄存器,然后再将WriteBuf清空
		
		WriteBuffer[0] = NOP;
		WriteBuffer[1] = NOP;
		WriteBuffer[2] = NOP;
		WriteBuffer[3] = NOP;
		
		switch(RegisterStarAddress + i)
		{
			case REG_ID:                    //ID寄存器(0x04，8位寄存器)
			case REG_COM_STA:               //状态寄存器(0x00，8位寄存器)
			case REG_GPOCON:                //通用数字输出控制寄存器(0x05，8位寄存器)
				AD7192_ReadData(WriteBuffer,ReadBuffer,1);    //此3种情况是读取一个字节
				DataBuffer[OffsetInBuffer + i] = ReadBuffer[0];
			break;
			
			case REG_MODE:                  //模式寄存器(0x01，24位)
			case REG_CONF:                  //配置寄存器(0x02，24位)
			case REG_OFFSET:                //失调寄存器(0x06，24位)
			case REG_FS:                    //满量程寄存器(0x07，24位)
				AD7192_ReadData(WriteBuffer,ReadBuffer,3);         //此4种情况是读取3个字节
				DataBuffer[OffsetInBuffer +i] = ReadBuffer[0];
				DataBuffer[OffsetInBuffer +i] = (DataBuffer[OffsetInBuffer +i]<<8)+ReadBuffer[1];
				DataBuffer[OffsetInBuffer +i] = (DataBuffer[OffsetInBuffer +i]<<8)+ReadBuffer[2];
			break;
			
			
			case REG_DATA:              //数据寄存器(0x03，24位或32位) 
				if(AD7192Registers[REG_MODE]&DAT_STA_EN)       //多通道使能，将状态寄存器的内容附加到数据寄存器24位的数据上，所以是32位数据
				{
					AD7192_ReadData(WriteBuffer,ReadBuffer,4);    //所以此情况是读4个字节 
					DataBuffer[OffsetInBuffer +i] = ReadBuffer[0];
					DataBuffer[OffsetInBuffer +i] = (DataBuffer[OffsetInBuffer +i]<<8)+ReadBuffer[1];
					DataBuffer[OffsetInBuffer +i] = (DataBuffer[OffsetInBuffer +i]<<8)+ReadBuffer[2];
					DataBuffer[OffsetInBuffer +i] = (DataBuffer[OffsetInBuffer +i]<<8)+ReadBuffer[3];
					break;
				}
				else
				{
					AD7192_ReadData(WriteBuffer,ReadBuffer,3);         
					DataBuffer[OffsetInBuffer +i] = ReadBuffer[0];
					DataBuffer[OffsetInBuffer +i] = (DataBuffer[OffsetInBuffer +i]<<8)+ReadBuffer[1];
					DataBuffer[OffsetInBuffer +i] = (DataBuffer[OffsetInBuffer +i]<<8)+ReadBuffer[2];
					break;
				}
				
			default:
				break;
		}
	}
	return 0;
}

void AD7192SoftWareReset(void)
{
	
	//AD7192软件复位函数；软件复位的原理，通过执行一个占用至少40个串行时钟周期的写操作，并式DIN处去高电平状态。
	
	 /*分别定义一个读缓存和写缓存，再把写缓存赋值，然后通过
	调用void ADuC7026SpiOperation(unsigned char* WriteBuffer, unsigned char *ReadBuffer, unsigned char NumberOfByte)来执行，将写缓存数据传送至AD7192*/
	
	unsigned char WriteBuffer[1];   //写缓存
	unsigned char ReadBuffer[1];    //读缓存
	unsigned char i;
	
	WriteBuffer[0] = 0xFF;
	
	for(i=0;i<10;i++)    //调用STM32F103SpiOperation()来实现数据传输，向AD7192的通信寄存器写40个1；0xFF是8个1，循环5次一共是40个1。
	{
		AD7192_ReadData(WriteBuffer,ReadBuffer,1);
	}
	AD7192_SCLK_H;
}

uint32_t AD7192ReadConvertingData(void)
{
	unsigned char WriteBuffer[4];
	unsigned char ReadBuffer[4];
	unsigned long int DataBuffer;
	
	//AD7192_CS_ENABLE() 片选信号使能，选通AD7192
	WriteBuffer[0] = WEN |RW_R |(REG_DATA << 3) | CREAD_DIS;
	
	AD7192_ReadData(WriteBuffer,ReadBuffer,1);   //首先写入通信寄存器，确认下一步操作是读取数据寄存器
	
	WriteBuffer[0] = NOP;
	WriteBuffer[1] = NOP;
	WriteBuffer[2] = NOP;
	WriteBuffer[3] = NOP;
	
	while(HAL_GPIO_ReadPin(AD7192_MISO_PORT,AD7192_MISO_PIN) == 0){}
	while(HAL_GPIO_ReadPin(AD7192_MISO_PORT,AD7192_MISO_PIN) == 1){}    //waiting the 1st RDY failling edge;即DOUT变为低电平。
		
	
	if((AD7192Registers[REG_MODE] &DAT_STA_EN) == DAT_STA_EN)
	{
		AD7192_ReadData(WriteBuffer,ReadBuffer,4);
		
		DataBuffer = ReadBuffer[0];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[1];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[2];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[3];
	}
	else
	{
		AD7192_ReadData(WriteBuffer,ReadBuffer,3);
		
		DataBuffer = ReadBuffer[0];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[1];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[2];
	}
	return DataBuffer;
}

uint32_t AD7192ContinuousRead(void)
{
	unsigned char WriteBuffer[4];
	unsigned char ReadBuffer[4];
	unsigned long int DataBuffer;

	
	WriteBuffer[0] = NOP;
	WriteBuffer[1] = NOP;
	WriteBuffer[2] = NOP;
	WriteBuffer[3] = NOP;
	
	while(HAL_GPIO_ReadPin(AD7192_MISO_PORT,AD7192_MISO_PIN) == 0){}
	while(HAL_GPIO_ReadPin(AD7192_MISO_PORT,AD7192_MISO_PIN) == 1){}    //waiting the 1st RDY failling edge;即DOUT变为低电平。
		
	
	if((AD7192Registers[REG_MODE] &DAT_STA_EN) == DAT_STA_EN)
	{
		AD7192_ReadData(WriteBuffer,ReadBuffer,4);
		
		DataBuffer = ReadBuffer[0];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[1];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[2];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[3];
	}
	else
	{
		AD7192_ReadData(WriteBuffer,ReadBuffer,3);
		
		DataBuffer = ReadBuffer[0];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[1];
		DataBuffer = (DataBuffer<<8)+ReadBuffer[2];
	}
	return DataBuffer;
}

void AD7192ExitContinuousRead(void)
{
	unsigned char WriteBuffer[1];
	unsigned char ReadBuffer[1];
	
	while(HAL_GPIO_ReadPin(AD7192_MISO_PORT,AD7192_MISO_PIN) == 0){}
	while(HAL_GPIO_ReadPin(AD7192_MISO_PORT,AD7192_MISO_PIN) == 1){}    //waiting the 1st RDY failling edge;即DOUT变为低电平。
		
	
	//AD7192_CS_ENABLE() 片选信号使能，选通AD7192
	WriteBuffer[0] = WEN |RW_R |(REG_DATA << 3) | CREAD_DIS;
	
	AD7192_ReadData(WriteBuffer,ReadBuffer,1);   //首先写入通信寄存器，确认下一步操作是读取数据寄存器
	
}
