==> hazy1k/STM32-Study-Notes/3.开发板必备资料/模块资料/ADC_DAC/野火【ADC_AD7192】模块资料/2-配套程序/F103指南者开发板/AD7192-2路差分连续转换输出（标准库）/User/ad7192/bsp_ad7192.c <==
#include "./ad7192/bsp_ad7192.h"
#include <string.h>
#include <stdio.h>

void AD7192_Init(void)
{
	SPI_InitTypeDef  SPI_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;	
  /* 使能SPI外设以及SPI引脚时钟 */
	/* 使能SPI时钟 */
	AD7192_SPI_APBxClock_FUN ( AD7192_SPI_CLK, ENABLE );
	
	/* 使能SPI引脚相关的时钟 */
 	AD7192_SPI_CS_APBxClock_FUN ( AD7192_SPI_CS_CLK|AD7192_SPI_SCK_CLK|
																	AD7192_SPI_MISO_PIN|AD7192_SPI_MOSI_PIN, ENABLE );
	/* 配置SPI的 CS引脚，普通IO即可 */
  GPIO_InitStructure.GPIO_Pin = AD7192_SPI_CS_PIN;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(AD7192_SPI_CS_PORT, &GPIO_InitStructure);	
	
  /* 配置SPI的 SCK引脚*/
  GPIO_InitStructure.GPIO_Pin = AD7192_SPI_SCK_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(AD7192_SPI_SCK_PORT, &GPIO_InitStructure);

  /* 配置SPI的 MISO引脚*/
  GPIO_InitStructure.GPIO_Pin = AD7192_SPI_MISO_PIN;
  GPIO_Init(AD7192_SPI_MISO_PORT, &GPIO_InitStructure);

  /* 配置SPI的 MOSI引脚*/
  GPIO_InitStructure.GPIO_Pin = AD7192_SPI_MOSI_PIN;
  GPIO_Init(AD7192_SPI_MOSI_PORT, &GPIO_InitStructure);
  


	/* SPI 模式配置 */
  SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
  SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
  SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_32;
  SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_InitStructure.SPI_CRCPolynomial = 7;
  SPI_Init(AD7192_SPIx , &SPI_InitStructure);

  /* 使能 SPI  */
  SPI_Cmd(AD7192_SPIx , ENABLE);

  
  /* 片选使能 */
  AD7192_CS_ENABLE();
}

void AD7192SoftwareReset(void)        //AD7192软件复位函数；软件复位的原理，通过执行一个占用至少40个串行时钟周期的写操作，并式DIN处去高电平状态。
{
  /*分别定义一个读缓存和写缓存，再把写缓存赋值，然后通过
	调用void ADuC7026SpiOperation(unsigned char* WriteBuffer, unsigned char *ReadBuffer, unsigned char NumberOfByte)来执行，将写缓存数据传送至AD7192*/
	unsigned char WriteBuf[1]; //写缓存
	unsigned char ReadBuf[1];  //读缓存
	unsigned char i;
	
	
	WriteBuf[0]	= 0xFF;	 
	for(i=0; i<10; i++)
	{
		AD7192readdata(WriteBuf, ReadBuf, 1);//调用STM32F103SpiOperation()来实现数据传输，向AD7192的通信寄存器写40个1；0xFF是8个1，循环5次一共是40个1。
	}
	 AD7192_SCLK_H;
}

unsigned char ReadFromAD7192ViaSPI(const unsigned char RegisterStartAddress, const unsigned char NumberOfRegistersToRead, uint32_t *DataBuffer, const unsigned char OffsetInBuffer)
{
//形参包括要读寄存器的起始地址RegisterStartAddress(取值范围是从0x00——0x07)，要读取寄存器的个数，指向将读取AD7192寄存器数据存入的数组的指针(DataBuffer才是要读入的值其他是中间变量)，
//一般指向AD7192Registers[8]，
//const unsigned char OffsetInBuffer，字面意思是缓存内偏移，是指AD7192Registers[8]数组内部偏移，注意是数组哦，之前我们说过AD7192Registers[8]之所以定义8个元素，
//一个寄存器对应AD7192Registers[8]数组的一个元素，互不干扰。
	
	unsigned char WriteBuf[4]={0,0,0,0}; //定义有4个元素的写缓存数组，每个数组元素占1个字节。
	unsigned char ReadBuf[4]={0,0,0,0};  //定义有4个元素的读缓存数组，每个数组元素占1个字节。
	unsigned char i;

	
	//Delay(0xFFFF);
	for(i=0; i < NumberOfRegistersToRead; i++)
	{
		WriteBuf[0] = WEN|RW_R|((RegisterStartAddress + i)<<3)|CREAD_DIS;	 //写入通信寄存器;8位数据;下一个操作是对指定寄存器执行读操作。CREAD_DIS表示不使能连续读。
		//确定下一步进行寄存器读操作，那么写操作自然无效喽。
		AD7192readdata(WriteBuf, ReadBuf, 1);//首先通过写入通信寄存器来选定下一步要读取的寄存器
                                                //然后再将WriteBuf清空
		WriteBuf[0] = NOP;
		WriteBuf[1]	= NOP;
		WriteBuf[2]	= NOP;
		WriteBuf[3]	= NOP;                       

		switch(RegisterStartAddress + i)
			{
			case REG_ID		   :     //ID寄存器(0x04，8位寄存器)
			case REG_COM_STA :     //状态寄存器(0x00，8位寄存器)
			case REG_GPOCON  :     //通用数字输出控制寄存器(0x05，8位寄存器)
				AD7192readdata(WriteBuf, ReadBuf, 1);    //此3种情况是读取一个字节
				DataBuffer[OffsetInBuffer + i ] =  ReadBuf[0];
				break;
				
			case REG_MODE   :     //模式寄存器(0x01，24位)
			case REG_CONF	  :     //配置寄存器(0x02，24位)
			case REG_OFFSET :     //失调寄存器(0x06，24位)
			case REG_FS		  :     //满量程寄存器(0x07，24位)
				AD7192readdata(WriteBuf, ReadBuf, 3);	      //此4种情况是读取3个字节
        DataBuffer[OffsetInBuffer + i ] = ReadBuf[0];			
				DataBuffer[OffsetInBuffer + i ] = (DataBuffer[OffsetInBuffer + i ]<<8) + ReadBuf[1];
				DataBuffer[OffsetInBuffer + i ] = (DataBuffer[OffsetInBuffer + i ]<<8) + ReadBuf[2];
				break;
				
			case REG_DATA	 :     //数据寄存器(0x03，24位或32位) 
				if (AD7192Registers[REG_MODE] & DAT_STA_EN)	      //多通道使能，将状态寄存器的内容附加到数据寄存器24位的数据上，所以是32位数据
					{
					AD7192readdata(WriteBuf, ReadBuf, 4);	    //所以此情况是读4个字节 
					DataBuffer[OffsetInBuffer + i ] = ReadBuf[0];
					DataBuffer[OffsetInBuffer + i ] = (DataBuffer[OffsetInBuffer + i ]<<8) + ReadBuf[1];
					DataBuffer[OffsetInBuffer + i ] = (DataBuffer[OffsetInBuffer + i ]<<8) + ReadBuf[2];					
					DataBuffer[OffsetInBuffer + i ] = (DataBuffer[OffsetInBuffer + i ]<<8) + ReadBuf[3];
					break;
					}
				else 
					{
					AD7192readdata(WriteBuf, ReadBuf, 3);	   //do not transfer the status contents after read data register 
					DataBuffer[OffsetInBuffer + i ] = ReadBuf[0];
					DataBuffer[OffsetInBuffer + i ] = (DataBuffer[OffsetInBuffer + i ]<<8) + ReadBuf[1];
					DataBuffer[OffsetInBuffer + i ] = (DataBuffer[OffsetInBuffer + i ]<<8) + ReadBuf[2];
					break;
					}
	
			default			 : 
					break;
															
		}
	}
	                          
	return 0;
}

unsigned char WriteToAD7192ViaSPI(const unsigned char RegisterStartAddress, const unsigned char NumberOfRegistersToWrite, uint32_t *DataBuffer, const unsigned char OffsetInBuffer)
{
//形参包括要写入寄存器的起始地址RegisterStartAddress(取值范围是从0x00——0x07)，写入寄存器的个数，指向要写入AD7192寄存器的数组的指针(DataBuffer才是要写出的值其他是中间变量)，
//const unsigned char OffsetInBuffer虽然定义但没有用到，主要是与通过SPI向AD7192读操作函数对称
/*分别定义一个读缓存和写缓存，再把写缓存赋值，然后通过
	调用void ADuC7026SpiOperation(unsigned char* WriteBuffer, unsigned char *ReadBuffer, unsigned char NumberOfByte)来执行，将写缓存数据传送至AD7192*/
	unsigned char WriteBuf[4];//定义unsigned char WriteBuf[4]数组，数组中的元素为无符号字符型，占一个字节
	unsigned char ReadBuf[4]; //定义unsigned char ReadBuf[4]数组，数组中的元素为无符号字符型，占一个字节
	unsigned char i;

	for(i=0; i<NumberOfRegistersToWrite; i++)        //DataBuffer通常指向AD7192Registers
	{
		WriteBuf[0]	= WEN|RW_W|((RegisterStartAddress + i)<<3)|CREAD_DIS;//无一例外，首先写入通信寄存器;8位数据;下一个操作是对指定寄存器执行写操作。
		WriteBuf[1] = DataBuffer[RegisterStartAddress + i]>>16;          //右移16位表示什么意思？DataBuffer是指向无符号长整型的数组指针，每个数组元素占4个字节(32位)，最高的8位无效，该语句是将16-23这8位二进制数赋给WriteBuf[1]。
		WriteBuf[2] = DataBuffer[RegisterStartAddress + i]>>8;           //右移8位表示什么意思？同理该语句是将8-15这8位二进制数赋给WriteBuf[2]。
		WriteBuf[3]	= DataBuffer[RegisterStartAddress + i];              //同理该语句是将0-7这8位二进制数赋给WriteBuf[3]。
		AD7192readdata(WriteBuf, ReadBuf, 4);                      //看到了吧，最后还是通过调用STM32F103SpiOperation(WriteBuf, ReadBuf, 4)来完成写操作
	}

	return 0;
}

uint32_t AD7192ReadConvertingData(void)
{
	unsigned char WriteBuf[4];
	unsigned char ReadBuf[4];
	unsigned long int DataBuffer;

	//AD7192_CS_ENABLE();//片选信号使能，选通AD7192。
	WriteBuf[0] = WEN|RW_R|((REG_DATA)<<3)|CREAD_DIS;	 

	AD7192readdata(WriteBuf, ReadBuf, 1);//首先写入通信寄存器，确认下一步操作是读取数据寄存器

	WriteBuf[0] = NOP;
	WriteBuf[1] = NOP;	
	WriteBuf[2] = NOP;
	WriteBuf[3]	= NOP;

	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 0){;}			
	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	if ((AD7192Registers[REG_MODE] & DAT_STA_EN) == DAT_STA_EN)
  {
		AD7192readdata(WriteBuf, ReadBuf, 4);	  
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
		DataBuffer = (DataBuffer<<8) + ReadBuf[3];
  }
	else 
  {
		AD7192readdata(WriteBuf, ReadBuf, 3);	   //do not transfer the status contents after read data register 
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
  }

	return DataBuffer;
}

uint32_t AD7192ContinuousRead()
{
	unsigned char WriteBuf[4];
	unsigned char ReadBuf[4];
	unsigned long int DataBuffer;//无符号32位长整型数据缓存变量。

	WriteBuf[0] = NOP;
	WriteBuf[1] = NOP;	
	WriteBuf[2] = NOP;
	WriteBuf[3]	= NOP;

	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 0){;}			
	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	if ((AD7192Registers[REG_MODE] & DAT_STA_EN) == DAT_STA_EN)	//多通道使能，将状态寄存器的内容附加到数据寄存器24位的数据上，所以此情况是读4个字节。
  {
		AD7192readdata(WriteBuf, ReadBuf, 4);	  
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
		DataBuffer = (DataBuffer<<8) + ReadBuf[3];
  }
	else 
  {
		AD7192readdata(WriteBuf, ReadBuf, 3);	   //do not transfer the status contents after read data register 
		DataBuffer = 0x00;
		DataBuffer = (DataBuffer<<8) + ReadBuf[0];	
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
  }

	return DataBuffer;
}

void AD7192ExitContinuousRead()
{
	unsigned char WriteBuf[1];
	unsigned char ReadBuf[1];

	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 0){;}			
	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	WriteBuf[0]	= WEN|RW_R|(REG_DATA<<3)|CREAD_DIS;

	AD7192readdata(WriteBuf, ReadBuf, 1);		
}
